antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__plan_completion_waits_for_input.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
assertion_line: 865
expression: popup
---
 ┃ Ask Antex to do anything

  gpt-5 medium · /tmp/project                   Plan mode (shift+tab to cycle)
