antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__portable_image_echo_renders_once.snap
---
source: tui/src/chatwidget/tests/composer_submission.rs
assertion_line: 2589
expression: "lines_to_single_string(&rendered[0])"
---

 ┃ [Image #1] describe
