antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__renamed_thread_footer_title.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 4159
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
" ┃ Ask Antex to do anything                                                     "
"                                                                                "
"  gpt-5.2 high · Roadmap cleanup                                                "
