antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__replayed_delegated_tool_output.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
assertion_line: 299
expression: "lines_to_single_string(&cells[0])"
---
• Sent by Antex from task source-task
  Follow <up> & report
