antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__replayed_in_progress_turn.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
assertion_line: 1629
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
• Working (0s • esc to interrupt)


 ┃ Ask Antex to do anything

  gpt-5.6-sol default · /tmp/project
